--- a/client/src/app/manifest.json
+++ b/client/src/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "short_name": "",
+  "name": "SAMSUNG DESIGN MEMBERSHIP 2025",
+  "short_name": "SDM2025",
   "icons": [
     {
       "src": "/icons/apple-touch-icon.png",
