--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,12 +2,24 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*", "./*", "public/*"],
-      "icons": ["public/icons"],
-      "img": ["public/img"]
+      "@/*": [
+        "src/*",
+        "./*",
+        "public/*"
+      ],
+      "icons": [
+        "public/icons"
+      ],
+      "img": [
+        "public/img"
+      ]
     },
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -24,8 +36,17 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Frame"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/Frame"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
