--- a/main/package.json
+++ b/main/package.json
@@ -17,6 +17,7 @@
     "@next/third-parties": "^15.1.2",
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
